<resources>
    <string name="app_name">ScanKitDemo</string>
    <string name="title">Scan</string>
    <string name="scan_tip">Place the code within the frame</string>
    <string name="no_code_tip">No code detected.</string>
    <string name="confirm">OK</string>
    <string name="light">Touch for more light</string>
    <string name="light_off">Turn off light</string>
    <string name="default_view_decoe">Default View Mode</string>
    <string name="photo_decode">Decode Photo</string>
    <string name="customized_view_decode">Customized View Mode</string>
    <string name="bitmap_api_decode">Bitmap Mode</string>
    <string name="multiProcessor_api_syn_decode">MultiProcessor API Synchronous Mode</string>
    <string name="multiProcessor_api_asyn_decode">MultiProcessor API Asynchronous Mode</string>
    <string name="generate_QR_code">Generate QR Code</string>
    <string name="barcode_width">Barcode width:</string>
    <string name="barcode_height">Barcode height:</string>
    <string name="barcode_type">Type:</string>
    <string name="barcode_color">Color:</string>
    <string name="barcode_backgroundcolor">Background:</string>
    <string name="barcode_margin">Margin:</string>
    <string name="width_value">700</string>
    <string name="height_value">700</string>
    <string name="generate_barcode">Generate Barcode</string>
    <string name="save_barcode">Save Barcode</string>
    <string name="barcode_content">Barcode Content:</string>
    <string name="content_detail">HUAWEI Scan Kit scans and parses all major 1D and 2D barcodes, helping you quickly build barcode scanning functions into your apps.</string>
    <string name="content_detailb">MultiCodeDecoder：Decode Multi Codes</string>
    <string name="title_result">Result</string>
    <string name="code_format">Code Format</string>
    <string name="result_type">Result Type</string>
    <string name="result_content">Result</string>
    <string name="copy">Copy</string>
    <string name="add_contact">Add Contact</string>
    <string name="connect_network">Connet to network</string>
    <string name="add_calendar">Add to calendar</string>
    <string name="send_sms">Send SMS</string>
    <string name="call">Call</string>
    <string name="nivigation">Nivigation</string>
    <string name="send_email">Send Email</string>
    <string name="copy_toast">Content has been copied</string>
    <string name="open_browser">Open in browser</string>
    <string name="mwc_title">HMS Core Scan Kit Demo</string>
    <string name="mwc_subject">About Scan Kit</string>
    <string name="mwc_detail">An in-app scanner for 1D and 2D barcodes connects your app to real-world scenarios and helps you build powerful code scanning capabilities with a minimum of 5 lines of code.</string>
    <string name="scan_showresult">Scan results will show on screen</string>
</resources>
