<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/barcode_type_t"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/code_format"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/barcode_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="#99000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/barcode_type_mon_t"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/result_type"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/barcode_type_mon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="#99000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/result_t"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/result_content"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/barcode_rawValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="20dp"
            android:textColor="#99000000"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="20dp"
        android:background="#000000"></View>
</LinearLayout>